--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,6 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 aiohttp==3.9.1
-yfinance==0.2.28
 tweepy==4.14.0
 feedparser==6.0.10
 pandas>=2.2.0
@@ -17,12 +16,8 @@ numpy==1.26.2
 plotly==5.17.0
 matplotlib==3.8.2
 transformers==4.36.2
-<<<<<<< HEAD
 torch==2.2.0
 # chromadb==0.4.18
-=======
-torch==2.1.2
-chromadb==0.4.18
->>>>>>> 22d588f1441daecb5784d63a1f084b0589ead99c
+httpx==0.27.0
 google-generativeai==0.3.2
 structlog==23.2.0
