--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.3.0",
+    "lightweight-charts": "^5.0.9",
+    "plotly.js": "^2.20.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.3.0",
-    "plotly.js": "^2.20.0",
     "react-plotly.js": "^2.6.0",
-    "tailwindcss": "^3.2.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "react-router-dom": "^6.8.0",
+    "tailwindcss": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
