--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.0",
     "lightweight-charts": "^5.0.9",
+    "lucide-react": "^0.561.0",
     "plotly.js": "^2.20.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
